--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
             integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
@@ -15,7 +16,7 @@
     <title>Pure Bootstrap Website</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="100">
     <!-- navigation section -->
     <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
 
@@ -29,25 +30,19 @@
             <!-- navigation menu -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#">Home</a>
+                    <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#">Skills</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link text-light text-uppercase font-weight-bold px-3 dropdown-toggle" href="#" data-toggle="dropdown">Projects</a>
-                    <!-- drop menu -->
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Project 1</a>
-                        <a class="dropdown-item" href="#">Project 2</a>
-                        <a class="dropdown-item" href="#">Project 3</a>
-                    </div>
+                    <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#">Team</a>
+                    <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#">Content</a>
+                    <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#team">Team</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light text-uppercase font-weight-bold px-3" href="#content">Content</a>
                 </li>
             </ul>
 
@@ -65,7 +60,7 @@
     </nav>
 
     <!-- banner section -->
-    <section>
+    <section id="home">
         <div class="container-fluid">
             <div class="row bg-info justify-content-center align-items-center" style="height: 100vh">
                 <div class="col-sm-10 text-center">
@@ -81,7 +76,7 @@
     </section>
 
     <!-- skills section -->
-    <section class="bg-light p-5">
+    <section id="skills" class="bg-light p-5">
         <div class="container-fluid">
             <!-- title -->
             <div class="row">
@@ -118,7 +113,7 @@
     </section>
 
     <!-- projects section-->
-    <section class="p-5">
+    <section id="projects" class="p-5">
         <div class="container-fluid">
             <!-- title -->
             <div class="row">
@@ -158,7 +153,7 @@
     </section>
 
     <!-- team section -->
-    <section class="p-sm-5 p-2 bg-secondary">
+    <section id="team" class="p-sm-5 p-2 bg-secondary">
         <div class="container-fluid">
             <!-- title -->
             <div class="row">
@@ -231,7 +226,7 @@
     </section>
 
     <!-- progress section -->
-    <section class="p-5">
+    <section id="progress" class="p-5">
         <div class="container-fluid">
             <!-- title -->
             <div class="row">
@@ -268,7 +263,7 @@
     </section>
 
     <!-- form section -->
-    <section class="p-5 bg-light">
+    <section id="content" class="p-5 bg-light">
         <!-- title -->
         <div class="row">
             <div class="col text-center mb-3">
@@ -327,14 +322,14 @@
     </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
             crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+            integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
             crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+            integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
             crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
